# dev-vault

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
autox/: Cargo.toml
autox/src/: linux.rs  windows.rs
dev-vault/: Cargo.toml
dev-vault/src/: cache.rs  env.rs  error.rs  interactor.rs  lib.rs  task.rs  user.rs
dev-vault/src/op/: context.rs
dev-vault/src/op/context/: exec.rs  wrap.rs
dev-vault/src/task/: core.rs  multi.rs  plan.rs
dev-vault/src/task/multi/: app.rs  auto.rs  copy.rs  exec.rs
dev-vault/src/task/multi/copy/: check.rs
dev-vault/src/task/plan/: tests.rs
dev-vault/src/user/: core.rs  multi.rs  params.rs  util.rs  wrap.rs
dev-vault/src/user/core/: file.rs  process.rs
dev-vault/src/user/multi/: host.rs  local.rs  ssh.rs
dev-vault/src/user/multi/host/: process.rs
dev-vault/src/user/multi/local/: process.rs
dev-vault/src/user/multi/ssh/: config.rs  file.rs  process.rs
dev-vault/src/user/util/: am.rs  command.rs
dev-vault/src/user/util/am/: linux.rs  mock.rs
dev-vault/src/user/util/am/linux/: alpine.rs  apk.rs  apt.rs  distro.rs  manjaro.rs  pacman.rs  support.rs
dev-vault/src/user/util/am/linux/support/: apk.rs  apk.sh  apt.rs  apt.sh  pacman.rs  pacman.sh  paru.rs  yay.rs
dev-vault/src/user/util/command/: linux.rs
dev-vault/src/user/util/command/linux/: distro.rs  openrc.rs  systemd.rs
dv/: Cargo.toml
dv-api/: Cargo.toml
dv-api/src/: core.rs  dev.rs  error.rs  fs.rs  lib.rs  multi.rs  params.rs  process.rs  user.rs  util.rs  wrap.rs
dv-api/src/multi/: local.rs  ssh.rs
dv-api/src/multi/local/: config.rs  file.rs  process.rs  systemd.rs
dv-api/src/multi/ssh/: config.rs  error.rs  process.rs
dv-api/src/user/: config.rs  device.rs  multi.rs
dv-api/src/user/multi/: local.rs  ssh.rs
dv-api/src/user/multi/local/: config.rs
dv-api/src/user/multi/ssh/: config.rs
dv-api/src/util/: am.rs  command.rs  dev_info.rs  path.rs  pm.rs
dv-api/src/util/am/: linux.rs  mock.rs  windows.rs
dv-api/src/util/am/linux/: debian.rs  manjaro.rs  support.rs
dv-api/src/util/am/linux/support/: apk.rs  apt.rs  pacman.rs  paru.rs  yay.rs
dv-api/src/util/am/windows/: support.rs
dv-api/src/util/am/windows/sh/: winget_install.ps1
dv-api/src/util/command/: linux.rs
dv-api/src/util/command/linux/: debian.rs  manjaro.rs
dv-api/src/util/command/linux/support/: openrc.rs  systemd.rs
dv-api/src/util/dev_info/: linux.rs
dv-api/src/util/pm/: platform.rs  support.rs
dv-api/src/util/pm/platform/: alpine.rs  debian.rs  manjaro.rs  windows.rs
dv-api/src/util/pm/support/: apk.rs  apt.rs  pacman.rs  paru.rs  winget.rs  yay.rs
dv/src/: adapter.rs  arg.rs  cache.rs  config.rs  interactor.rs  main.rs
dv/src/config/: example.rs  group.rs  task.rs  user.rs
dv/src/config/task/: core.rs  multi.rs
dv/src/config/task/multi/: app.rs  auto.rs  copy.rs  exec.rs
dv4cfg/: Cargo.toml
dv4cfg/src/: adapter.rs  arg.rs  cache.rs  config.rs  error.rs  interactor.rs  main.rs  task.rs  user.rs
dv4cfg/src/config/: example.rs  group.rs  task.rs  user.rs
dv4cfg/src/op/: context.rs
dv4cfg/src/op/context/: exec.rs  wrap.rs
dv4cfg/src/task/: core.rs  multi.rs  plan.rs
dv4cfg/src/task/multi/: app.rs  auto.rs  copy.rs  exec.rs
dv4cfg/src/task/multi/copy/: check.rs
dv4rune/: Cargo.toml
dv4rune/src/: arg.rs  cache.rs  dv.rs  dvl.rs  interactor.rs  main.rs  multi.rs  utils.rs
dv4rune/src/multi/: app.rs  auto.rs  copy.rs  exec.rs  os.rs  pm.rs  sync.rs  user.rs  util.rs
dv4rune/wix/: main.wxs
dve/: Cargo.toml
dve/src/: cache.rs  dvl.rs  interactor.rs  main.rs
e4pty/: Cargo.toml
e4pty/src/: core.rs  error.rs  lib.rs
e4pty/src/instance/: local.rs
e4pty/src/instance/local/: linux.rs  windows.rs
