[workspace]
members = ["dv-api", "dv4rune"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.43.0", features = [
  "fs",
  "io-std",
  "sync",
  "rt-multi-thread",
  "macros",
] }
tracing = { version = "0.1.41" }
async-trait = "0.1.86"
snafu = "0.8.5"
home = { version = "0.5.11" }

[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
