[workspace]
members = ["autox", "dv-api", "dv4rune", "e4pty"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/dev-vault.git"

[workspace.dependencies]
tokio = { version = "1.44.2", features = [
    "fs",
    "io-std",
    "rt-multi-thread",
    "macros",
] }
tracing = { version = "0.1.41" }
async-trait = "0.1.88"
home = { version = "0.5.11" }

[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
