[package]
name = "autox"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = [
    "Win32_System_SystemServices",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
] }
scopeguard = "1.2.0"


[target.'cfg(not(windows))'.dependencies]
zbus = "5.5.0"
