[package]
name = "dev-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
bitflags = "2.8.0"
etc-os-release = "0.1.1"
futures = "0.3.31"
home = { version = "0.5.11" }
path-dedot = "3.1.1"
russh = "0.49.2"
russh-config = "0.48.0"
russh-keys = "0.49.2"
russh-sftp = "2.0.6"
rustix = { version="0.38.44",features = ["pty"] }
rustix-openpty = "0.1.1"
snafu = "0.8.5"
tokio.workspace = true
tokio-util = "0.7.13"
tracing.workspace=true
walkdir = "2.5.0"
zbus = "5.3.1"

[dev-dependencies]
tracing-test = { version = "0.2.5" }

