[package]
name = "dv-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

e4pty = { version = "0.1.0" }
bitflags = "2.9.0"
tokio-util = "0.7.13"
tempfile = "3.18.0"
etc-os-release = "0.1.1"
fastrand = "2.3.0"
home = { workspace = true, optional = true }
russh = { version = "0.50.4", features = [
    "async-trait",
], git = "https://github.com/km0e/russh.git", branch = "pty" }
russh-config = "0.50.0"
# russh-sftp = "2.0.8"# FIX:waiting for recent release
russh-sftp = { git = "https://github.com/km0e/russh-sftp.git" }
rustix = { version = "1.0.1", features = ["pty"] }
rustix-openpty = "0.2.0"
walkdir = "2.5.0"
zbus = "5.5.0"
camino = "1.1.9"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
resplus = { version = "0.1.1", features = ["full"] }


[features]
default = []
path-home = ["dep:home"]
full = ["path-home"]
