[package]
name = "dv-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

rune = { version = "0.14.0", git = "https://github.com/rune-rs/rune.git", optional = true }
e4pty = { version = "0.1.2", path = "../e4pty" }
autox = { path = "../autox" }
bitflags = "2.9.0"
tempfile = "3.18.0"
etc-os-release = "0.1.1"
fastrand = "2.3.0"
home = { workspace = true, optional = true }
# russh = { version = "0.50.4", features = [
#     "async-trait",
# ], git = "https://github.com/km0e/russh.git", branch = "pty" }
russh = { version = "0.51.1", features = [
    "async-trait",
], path = "../../russh/russh" }
russh-config = "0.50.0"
# russh-sftp = "2.0.8" # FIX:waiting for recent release
russh-sftp = { git = "https://github.com/km0e/russh-sftp.git" }
rustix = { version = "1.0.2", features = ["pty"] }
walkdir = "2.5.0"
camino = "1.1.9"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
resplus = { version = "0.1.1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_SystemServices",
    "Win32_Security",
] }

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2.0"
zbus = "5.5.0"

[features]
default = []
path-home = ["dep:home"]
rune = ["dep:rune"]
full = ["path-home", "rune"]
