[package]
name = "dv-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

rune = { version = "0.14.0", git = "https://github.com/rune-rs/rune.git", optional = true }
e4pty = { version = "0.1.5" }
autox = { path = "../autox" }
bitflags = "2.9.0"
tempfile = "3.19.1"
etc-os-release = "0.1.1"
fastrand = "2.3.0"
home = { workspace = true }
russh = { version = "0.51.1", features = [
    "async-trait",
], git = "https://github.com/km0e/russh.git", branch = "pty" }
# russh = { version = "0.51.1", features = [
#     "async-trait",
# ], path = "../../russh/russh" }
russh-config = "0.50.0"
russh-sftp = "2.1"
rustix = { version = "1.0.5", features = ["pty"] }
walkdir = "2.5.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
resplus = { version = "0.1.2", features = ["full"] }
regex = "1.11.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_SystemServices",
    "Win32_Security",
] }

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2.0"
zbus = "5.5.0"

[features]
default = []
rune = ["dep:rune"]
full = ["rune"]
