[package]
name = "dv4cfg"
version = "0.1.0"
edition = "2021"

[dependencies]
dv-api = { path = "../dv-api" }

tracing.workspace = true
tokio.workspace = true
snafu.workspace = true
async-trait.workspace = true
home.workspace = true

xcfg-rs = { version = "0.3.3", features = ["full"] }
clap = { version = "4.5.29", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio-fd = "0.3.0"
termion = "4.0.3"
futures = "0.3.31"
camino = { version = "1.1.9", features = ["serde1"] }

[dev-dependencies]
tracing-test = { version = "0.2.5" }
