[package]
name = "dv4rune"
version = "0.1.0"
edition = "2024"

[dependencies]
dv-api = { path = "../dv-api", features = ["full"] }

home.workspace = true
tokio.workspace = true
tracing.workspace = true
snafu.workspace = true
async-trait.workspace = true

rune = "0.13.4"
rune-modules = "0.13.4"
rusqlite = "0.33.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.30", features = ["derive"] }
termion = "4.0.3"
tokio-fd = "0.3.0"

[dev-dependencies]
assert_fs = "1.1.2"
