[package]
name = "dv4rune"
version = "0.1.0"
description = "a rune-based command line tool that provides abstract user (device) interoperability"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "F5B8D690-7A05-4CDA-8FAC-AE3912689AFC"
path-guid = "ED96C019-3206-4F56-8EA2-22C3F671E851"
license = false
eula = false

[dependencies]
dv-api = { path = "../dv-api", features = ["full"] }

home.workspace = true
tokio.workspace = true
tracing.workspace = true
snafu.workspace = true
async-trait.workspace = true
rustix = { version = "1.0.1", features = ["pty", "fs"] }

rune = "0.13.4"
rune-modules = "0.13.4"
rusqlite = "0.34.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.31", features = ["derive"] }
tokio-fd = "0.3.0"
crossterm = "0.28.1"

resplus = { path = "../../resplus/resplus/", features = ["full"] }

[dev-dependencies]
assert_fs = "1.1.2"
