[package]
name = "dv4rune"
version = "0.1.0"
description = "a rune-based command line tool that provides abstract user (device) interoperability"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "F5B8D690-7A05-4CDA-8FAC-AE3912689AFC"
path-guid = "ED96C019-3206-4F56-8EA2-22C3F671E851"
license = false
eula = false

[dependencies]
dv-api = { path = "../dv-api", features = ["full"] }

home.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

rustix = { version = "1.0.5", features = ["pty", "fs"] }

rune = { version = "0.14.0", git = "https://github.com/rune-rs/rune.git" }
rune-modules = { version = "0.14.0", git = "https://github.com/rune-rs/rune.git" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.35", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tempfile = "3.19.1"

resplus = { version = "0.1.2", features = ["full"] }
futures = "0.3.31"

[target.'cfg(not(windows))'.dependencies]
tokio-fd = "0.3.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[dev-dependencies]
assert_fs = "1.1.2"
