[package]
name = "dve"
version = "0.1.0"
edition = "2021"

[dependencies]
dev-vault = { path = "../dev-vault" }
rune = "0.13.4"
rune-modules = "0.13.4"
tokio.workspace = true
rusqlite = "0.33.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
snafu.workspace = true
clap = { version = "4.5.28", features = ["derive"] }
home = { version = "0.5.11" }
termion = "4.0.3"
tokio-fd = "0.3.0"
