[package]
name = "e4pty"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "abstract api for pty"
license = "MIT"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile = "3.18.0"
thiserror = "2.0.12"
resplus = { version = "0.1.1", features = ["full"] }

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
] }
