[package]
name = "e4pty"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "abstract api for pty"
license = "MIT"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile = "3.19.1"
thiserror = "2.0.12"
resplus = { version = "0.1.2", features = ["full"] }

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
rustix = { version = "1.0.5", features = ["process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
] }
